clang/test/BSC/Positive/Generic/StructAndFunction/normal_c_logic_4/normal_c_logic_4.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

struct Runtime {
    int a;
};
struct Runtime runtime;

int main() {
    struct Runtime a;
    runtime = a;
    return 0;
}

