clang/test/BSC/Negative/Driver/options/disable-ownership-check/disable-ownership-check.cbs

// RUN: %clang -disable-ownership-check %s -o %t.output
// RUN: %t.output

int main()
{
  owned int a = 0;
  return 0;
}